# TestBot

./: README.md  conftest.py  pyproject.toml  pytest.ini
common/: config.yaml
data/data_label/: base_data_label.json  specification.json  specification_refer.json
entity/api_asset/: api_asset.py
entity/file_asset/: file_asset.py
testcases/test_data_label/: test_data_label.py
utils/auth_tools/: auth_utils.py
utils/crypto_tools/: crypto_utils.py
utils/decorator_tools/: decorator_utils.py
utils/file_tools/: file_utils.py  word_doc_utils.py  zip_utils.py
utils/log_tools/: logger_utils.py
utils/notice_tools/: webcom_utils.py
utils/ocr_tools/: ocr_utils.py
utils/request_tools/: async_http_client.py
utils/sr_tools/: apione_utils.py
utils/ssh_tools/: ssh_connect.py  ssh_operation.py
utils/yaml_tools/: yaml_utils.py
