[project]
name = "testbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddddocr==1.5.6",
    "httpx==0.24.1",
    "loguru==0.7.3",
    "pycryptodome==3.23.0",
    "pytest==7.2.2",
    "pytest-asyncio==0.20.3",
    "ruamel-yaml==0.18.15",
]
