[project]
name = "testbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "asyncssh==2.21.0",
    "ddddocr==1.5.6",
    "fpdf2>=2.8.4",
    "httpx==0.24.1",
    "loguru==0.7.3",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pycryptodome==3.23.0",
    "pytest==7.2.2",
    "pytest-asyncio==0.20.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pywin32>=311",
    "ruamel-yaml==0.18.15",
    "xlwt>=1.3.0",
]
